--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: baejisu97@gmail.com
-    password: BAEjisu9712
+    username: EMAILADDRESS
+    password: PASSWORD
     properties:
       mail:
         smtp:
