[docs] application.yml에 공용 계정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: EMAILADDRESS
-    password: PASSWORD
+    username: dogpaw.swit@gmail.com
+    password: edutech123
     properties:
       mail:
         smtp:
